--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Go Build and Release
 
 on:
   push:
-    tags:
-      - "v*"  # 当推送标签时触发（例如 v1.0.0）
+    branches:
+      - main
 
 jobs:
   build:
